--- a/.env.example
+++ b/.env.example
@@ -57,4 +57,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-VITE_API_URI=http://127.0.0.1:8000
+
+VITE_API_URI=http://susi.test
